--- a/PopUpForm.html
+++ b/PopUpForm.html
@@ -37,25 +37,28 @@
                     <span class="closeButton glyphicon glyphicon-remove-circle" aria-hidden="true" onclick="PopUpShowHide()"></span>
                         <h3>POP UP FORM</h3>
                         <hr>
+						<form>
                         <ul class="list-group">
                             <li class="list-group-item">
-                                <input type="name" name="FIRST NAME" class="form-control" placeholder="Enter you first name...">
+                                <input type="name" name="FIRST NAME" class="form-control" placeholder="Enter you first name..." required pattern="[a-zA-ZА-Яа-я]+$">
                             </li>
                             <li class="list-group-item">
                                 <input type="name" name="LAST NAME" class="form-control" placeholder="Enter you last name...">
                             </li>
                             <li class="list-group-item">
-                                <input type="email" name="EMAIL" class="form-control" id="mce-EMAIL" placeholder="Email address...">
+                                <input type="email" name="EMAIL" class="form-control" id="mce-EMAIL" placeholder="Email address..." required>
                             </li>
                             <li class="list-group-item">
-                                <input type="tel" name="TELNUMBER" class="form-control" placeholder="You phonr number...">
+                                <input type="tel" name="TELNUMBER" class="form-control" placeholder="Phone in format xx-xxx-xxx-xx-xx..." pattern="[+][0-9]{2}-[0-9]{3}-[0-9]{3}-[0-9]{2}-[0-9]{2}" required>
                             </li>
                             <li class="list-group-item">
-                                <textarea type="text" name="MASSEGE" class="form-control" placeholder="Type you massege..." style="resize: vertical;"></textarea>
+                                <textarea type="text" name="MASSEGE" class="form-control" placeholder="Type you massege..." style="resize: vertical;" required></textarea>
                             </li>
                         </ul>
+							
                         <hr>
-                        <button  class="btnSendPopUpForm btn btn-outline-dark" onclick="PopUpShowHide(); popupThankMassege()">SEND</button>                        
+                        <button type="submit" class="btnSendPopUpForm btn btn-outline-dark">SEND</button>
+							</form>
                     </div>
             </div> 
     </div>   
