--- a/PopUpForm.html
+++ b/PopUpForm.html
@@ -49,7 +49,7 @@
                                 <input type="email" name="EMAIL" class="form-control" id="mce-EMAIL" placeholder="Email address..." required>
                             </li>
                             <li class="list-group-item">
-                                <input type="tel" name="TELNUMBER" class="form-control" placeholder="Phone in format xx-xxx-xxx-xx-xx..." pattern="[+][0-9]{2}-[0-9]{3}-[0-9]{3}-[0-9]{2}-[0-9]{2}" required>
+                                <input type="tel" name="TELNUMBER" class="form-control" placeholder="Phone in format +12-345-678-90-12" title="format +12-345-678-90-12" pattern="[+][0-9]{2}-[0-9]{3}-[0-9]{3}-[0-9]{2}-[0-9]{2}" required>
                             </li>
                             <li class="list-group-item">
                                 <textarea type="text" name="MASSEGE" class="form-control" placeholder="Type you massege..." style="resize: vertical;" required></textarea>
